überarbeitete Edition mit Jim, Jason und Sven bis XVII und kriyayoga intro fast fertig

--- a/bindu.bib
+++ b/bindu.bib
@@ -262,6 +262,27 @@ address={Lonavla},
   keywords={printsource},
 }
 
+@book{whitney1879,
+  title = {A Sanskrit Grammar; Including Both the Classical Language, and the Older Dialects, of Veda and Brahmana},
+  author = {Whitney, William Dwight},
+  year = {1879},
+  publisher = {Breitkopf and Härtel},
+  address = {Leipzig},
+  topics = {Sanskrit language -- Grammar},
+  language = {English},
+  note = {A supplement by the author appeared in the same series (Bd. II, Anhang II) with title: The Roots, Verb-Forms, and Primary Derivatives of the Sanskrit Language. Leipzig, 1885 (xiii, [1], 250 p.)},
+  url = {https://archive.org/details/sanskritgrammari00whituoft},
+}
+
+@book{anandakanda,
+  title = {Ānandakanda},
+  editor = {S. V. Radhakrishna Sastri},
+  year = {1952},
+  publisher = {Sri Vilasam Press},
+  address = {Srirangam},
+  keywords= {printsource}, 
+}
+
 @book{bäumer2013,
   title={Vijñānabhairava},
   subtitle={Vijñāna Bhairava - Das göttliche Bewußtsein},
@@ -1760,6 +1781,16 @@ keywords={seclit},
   subtitle={Guhyasūtra of the Niśvāsatattvasaṃhitā}, 
   note={NGMPP A 41/14 and NGMPP A 159/18},
   keywords={codex}, 
+}
+
+@inbook{lipner2004,
+  author      = {Julius Lipner},
+  title       = {Hinduism: The Way of the Banyan},
+  booktitle   = {The Hindu World},
+  editor      = {Sushil Mittal and Gene Thursby},
+  publisher   = {Routledge},
+  year        = {2004},
+  pages       = {9-36}
 }
 
 @codex{rajayoga, 
