--- a/intro.bib
+++ b/intro.bib
@@ -1762,6 +1762,75 @@ keywords={seclit},
   keywords={codex}, 
 }
 
+@book{anandakanda,
+  title = {Ānandakanda},
+  editor = {S. V. Radhakrishna Sastri},
+  year = {1952},
+  publisher = {Sri Vilasam Press},
+  address = {Srirangam},
+  keywords= {printsource}, 
+}
+
+@book{whitney1879,
+  title = {A Sanskrit Grammar; Including Both the Classical Language, and the Older Dialects, of Veda and Brahmana},
+  author = {Whitney, William Dwight},
+  year = {1879},
+  publisher = {Breitkopf and Härtel},
+  address = {Leipzig},
+  topics = {Sanskrit language -- Grammar},
+  language = {English},
+  note = {A supplement by the author appeared in the same series (Bd. II, Anhang II) with title: The Roots, Verb-Forms, and Primary Derivatives of the Sanskrit Language. Leipzig, 1885 (xiii, [1], 250 p.)},
+  url = {https://archive.org/details/sanskritgrammari00whituoft},
+}
+
+@incollection{ganesan2016saiva,
+  author = {Ganesan, T.},
+  title = {{Śaiva Āgamas: The Four Pādas and Thirty-six Tattvas}},
+  booktitle = {Brill’s Encyclopedia of Hinduism Online},
+  editor = {Knut A. Jacobsen and Helene Basu and Angelika Malinar and Vasudha Narayanan},
+  publisher = {Brill},
+  year = {2016},
+  url = {http://dx.doi.org/10.1163/2212-5019_BEH_COM_000416},
+  note = {Consulted online on 05 February 2024},
+  doi = {10.1163/2212-5019_BEH_COM_000416},
+  keywords={seclit}, 
+}
+
+@book{mrgendragama,
+ title={Mṛgendrāgama (Kriyāpada and Caryāpada)}, 
+ subtitle={with the Comm. by Bhaṭṭa Nārāyaṇa Kaṇṭha}, 
+ editor={Bhatt, N. R.}, 
+ publisher={Institut Français de Pondichéry}, 
+ year={1962},
+ keywords={printsource}, 
+}
+
+
+@book{mrgendragamabrunner,
+  title = {Mṛgendrāgama. Section des rites et section du comportement Avec la Vṛtti de Bhaṭṭanārāyaṇakanṭha},
+  author = {Mṛgendrāgama and Brunner-Lachaux, Hélène},
+  year = {1985},
+  publisher = {Institut Français de Pondichéry},
+  series = {Collection Indologie},
+  location = {Pondichéry},
+  note = {Publié avec le concours du CNRS},
+  pages = {564 p.},
+  url = {https://doi.org/10.4000/books.ifp.1809},
+  isbn = {979-10-365-4446-0},
+  doi = {10.4000/books.ifp.1809},
+  keywords={seclit}, 
+}
+
+@inbook{lipner2004,
+  author      = {Julius Lipner},
+  title       = {Hinduism: The Way of the Banyan},
+  booktitle   = {The Hindu World},
+  editor      = {Sushil Mittal and Gene Thursby},
+  publisher   = {Routledge},
+  year        = {2004},
+  pages       = {9-36}
+}
+
 @codex{rajayoga, 
   title={Rājayogaḥ},
   author={Śrī Agasthyamaunīndra},
@@ -1825,16 +1894,16 @@ keywords={seclit},
 }
 
 @book{petersburger,
-  title={Sanskrit Wörterbuch},
+  title={Sanskrit Wörterbuch 1},
   author={Boethling, O. und Roth, R.},
   year={1858},  
-  volume={2},
+  volume={1},
   address={Petersburg},
   keywords={seclit},
 }
 
 @book{petersburger2,
-  title={Sanskrit Wörterbuch},
+  title={Sanskrit Wörterbuch 2},
   author={Boethling, O. und Roth, R.},
   year={1858},  
   volume={2},
@@ -1843,7 +1912,7 @@ keywords={seclit},
 }
 
 @book{petersburger3,
-  title={Sanskrit Wörterbuch},
+  title={Sanskrit Wörterbuch 3},
   author={Boethling, O. und Roth, R.},
   year={1858},  
   volume={3},
@@ -1852,7 +1921,7 @@ keywords={seclit},
 }
 
 @book{petersburger4,
-  title={Sanskrit Wörterbuch},
+  title={Sanskrit Wörterbuch 4},
   author={Boethling, O. und Roth, R.},
   year={1858},  
   volume={4},
@@ -1861,7 +1930,7 @@ keywords={seclit},
 }
 
 @book{petersburger5,
-  title={Sanskrit Wörterbuch},
+  title={Sanskrit Wörterbuch 5},
   author={Boethling, O. und Roth, R.},
   year={1858},  
   volume={5},
