--- a/intro.tex
+++ b/intro.tex
@@ -232,20 +232,6 @@ Herstellung: \ \ BoD – Books on Demand GmbH, Norderstedt  \\
 \chapter{Introduction}
 \cleardoublepage
 
-\chapter{Dankesagung}
-Dominic Haas! Danke!
-Shaman Hatley! Danke!
-Dominik Goodall! Danke!
-Jim
-Jasom
-Mitsuyo
-Jüprgen
-Max!!!!
-Bastian!
-Roland Steiner
-Kolloquium
-allen MArburgern
-
 \section{General remarks}
 The \textit{Yogatattvabindu} is a premodern Sanskrit Yoga text on Rājayoga that was written in the first half of the seventeenth century\footnote{The dating of the text is discussed on p.\pageref{dating}.} in northern India.\footnote{The detailed discussion of the place of origin is found on p.\pageref{placeoforigin}.} The most salient feature of the work that makes it historically significant is its highly differentiated taxonomy of types of Yoga. In the \textit{Yogatattvabindu}'s introduction, most manuscripts name fifteen types of Yoga, presented as subtypes of Rājayoga. The text is a yogic compendium written in a mix of mainly prose and 41 verses in textbook-style, where its 58 topics topics are introduced in sections launched by recognizable phrases. Most sections deal with the subtypes of Rājayoga and their effects, but others also cover topics like yogic physiology and cosmogony.
 
@@ -259,9 +245,12 @@ One printed edition of the \textit{Yogatattvabindu} was published in 1905 with a
 
 This book contains an introduction, critical edition and annotated translation of the \textit{Yogatattvabindu}. The introduction discusses provenance, authorship and the audience of the \textit{Yogatattvabindu}. A comprehensive discussion of the taxonomy of the fifteen Yogas based on the critical edition of the \textit{Yogatattvabindu}, together with a close examination of the above-mentioned related texts with similar taxonomies, aims to establish their position within the broader history of yoga and particularly elucidates the development of Haṭha- and Rājayoga traditions in the late medieval period. The remainder of the introduction contains an overview of the manuscript evidence and the editorial policies underlying the edition.
 
-\section{Dating the \textit{Yogatattvabindu} and its implications for the dating of the \textit{Yogasvarodaya} and the \textit{Siddhasiddhāntapaddhati}}
+\section{Dating the \textit{Yogatattvabindu}}
 \label{dating}
-The oldest dated manuscript of the \textit{Yogatattvabindu} \getsiglum{N1}\footnote{For a description of the manuscript see  p.\pageref{n1description}.} was written in Nepal \textit{saṃvat} 837, which is 1716 CE. Since the text of this manuscript is missing a significant and lengthy passage (ca. 25\% of the entire text) and contains various corruptions, one can assume that some time had passed from the original composition for the transmission to deteriorate to this extent. Therefore, it is likely that the work was composed at least a few decades before the creation of this Nepalese manuscript, perhaps sometime in the 17th century. The discovery that Sundaradeva's \textit{Haṭhasaṅketacandrikā} quotes a lengthy passage of the \textit{Yogatattvabindu} without attribution confirms this suspicion. The passages quoted from the \textit{Yogatattvabindu} include the teachings on the sixteen \textit{ādhāra}s\footnote{\citetitle{hathasamketacandrikajodhpur} (ms. no. 2244, f. 95r l. 3 -- f. 96r l. 4).} and the teachings on Lakṣyayoga and its subtypes.\footnote{\citetitle{hathasamketacandrikajodhpur} (ms. no. 2244, f. 124r l. 7 -- f. 125r l. 3).} The dating of the \textit{Haṭhasaṅketacandrikā} just recently had to be revised due to the discovery that some first-hand notes surrounding the main text of the Ujjain \textit{Yogacintāmaṇi} were in all likelihood borrowed from Sundaradeva's \textit{Haṭhasaṅketacandrikā}.\footnote{Cf. \citeauthor{birch2024} (2024:52-54).} \citeauthor{birch2018proliferation} (2018) dated the Ujjain \textit{Yogacintāmaṇi} to 1659 CE.\footnote{Cf. \citeauthor{birch2018proliferation} (2018: p.50 n. 111).} Thus, the \textit{terminus ante quem} for the compilation of the \textit{Haṭhasaṅketacandrikā} is 1659 CE which automatically makes it also the \textit{terminus ante quem} for the \textit{Yogatattvabindu} and the \textit{Yogasvarodaya}, due to the fact that Sundaradeva quoted from the \textit{Yogatattvabindu} and Rāmacandra quoted from and rewrote the contents of the \textit{Yogasvarodaya}. Thus, we can safely assume that the \textit{Yogatattvabindu} was written in the course of the first half of the 17th century or earlier. Because of that Rāmancandra's main source text \textit{Yogasvarodaya} must have been written even earlier. Furthermore, \citeauthor{mallinsononline2013} (2013) estimated the age of the \textit{Siddhasiddhāntapaddhati} to circa 1700. Due to the above-mentioned new date of the \textit{Haṭhasaṅketacandrikā} and because Rāmacandra extensively quotes from \textit{Siddhasiddhāntapaddhati} the new terminus \textit{terminus ante quem} for the dating of the \textit{Siddhasiddhāntapaddhati} likewise must be set to 1659 CE. Thus, the \textit{Siddhasiddhāntapaddhati} was also likely composed during the first half of the 17th century or even ealier.
+The oldest dated manuscript of the \textit{Yogatattvabindu} \getsiglum{N1}\footnote{For a description of the manuscript see  p.\pageref{n1description}.} was written in Nepal \textit{saṃvat} 837, which is 1716 CE. Since the text of this manuscript is missing a significant and lengthy passage (ca. 25\% of the entire text) and contains various corruptions, one can assume that some time had passed from the original composition for the transmission to deteriorate to this extent. Therefore, it is likely that the work was composed at least a few decades before the creation of this Nepalese manuscript, perhaps sometime in the 17th century. The discovery that Sundaradeva's \textit{Haṭhasaṅketacandrikā} quotes a lengthy passage of the \textit{Yogatattvabindu} without attribution confirms this suspicion. The passages quoted from the \textit{Yogatattvabindu} include the teachings on the sixteen \textit{ādhāra}s\footnote{\citetitle{hathasamketacandrikajodhpur} (ms. no. 2244, f. 95r l. 3 -- f. 96r l. 4).} and the teachings on Lakṣyayoga and its subtypes.\footnote{\citetitle{hathasamketacandrikajodhpur} (ms. no. 2244, f. 124r l. 7 -- f. 125r l. 3).} The dating of the \textit{Haṭhasaṅketacandrikā} just recently had to be revised due to the discovery that some first-hand notes surrounding the main text of the Ujjain \textit{Yogacintāmaṇi} were in all likelihood borrowed from Sundaradeva's \textit{Haṭhasaṅketacandrikā}.\footnote{Cf. \citeauthor{birch2024} (2024:52-54).} \citeauthor{birch2018proliferation} (2018) dated the Ujjain \textit{Yogacintāmaṇi} to 1659 CE.\footnote{Cf. \citeauthor{birch2018proliferation} (2018: p.50 n. 111).} Thus, the \textit{terminus ante quem} for the compilation of the \textit{Haṭhasaṅketacandrikā} is 1659 CE which automatically makes it also the \textit{terminus ante quem} for the \textit{Yogatattvabindu} and the \textit{Yogasvarodaya}, due to the fact that Sundaradeva quoted from the \textit{Yogatattvabindu} and Rāmacandra quoted from and rewrote the contents of the \textit{Yogasvarodaya}. Thus, we can safely assume that the \textit{Yogatattvabindu} was written in the course of the first half of the 17th century or earlier. Because of that Rāmancandra's main source text \textit{Yogasvarodaya} must have been written even earlier.
+
+\subsection{Implications for the dating of the \textit{Yogasvarodaya} and the \textit{Siddhasiddhāntapaddhati}}
+Furthermore, \citeauthor{mallinsononline2013} (2013) estimated the age of the \textit{Siddhasiddhāntapaddhati} to circa 1700. Due to the above-mentioned new date of the \textit{Haṭhasaṅketacandrikā} and because Rāmacandra extensively quotes from \textit{Siddhasiddhāntapaddhati} the new terminus \textit{terminus ante quem} for the dating of the \textit{Siddhasiddhāntapaddhati} likewise must be set to 1659 CE. Thus, the \textit{Siddhasiddhāntapaddhati} was also likely composed during the first half of the 17th century or even ealier.
 
 \section{Kriyāyoga}
 
@@ -306,97 +295,121 @@ The passage on Kriyāyoga in the \textit{Yogatattvabindu} is relatively short. T
 \end{table}
 
 The one who cultivates positive [mind-]waves and reduces the negative is called a \textit{kriyāyogī}. In the prose passage of the section, the term \textit{bahukriyāyogi} is used. The term is unprecedented in the rest of the yoga literature and presumably intends to express many reduced and cultivated waves.
+\newpage 
+A closer examination of the Kriyāyoga section in the \textit{Yogasvarodaya} reveals Rāmancandra's reductionism since he excludes significant aspects of the original concept of the \textit{Yogasvarodaya}'s Kriyāyoga.
 
-A closer examination of the \textit{Yogasvarodaya} reveals Rāmancandra's reductionism since he excludes significant aspects of the original concept of the \textit{Yogasvarodaya}'s Kriyāyoga.
+%YK 1.214-216
 
-dhyānapūjādānayajñajapahomādikāḥ kriyāḥ |
-kriyāmuktimayo yogaḥ sapiṇḍisiddhidāyakaḥ |
+\begin{quote}
+\textit{dhyānapūjādānayajñajapahomādikāḥ kriyāḥ} |\\
+\textit{kriyāmuktimayo yogaḥ svapiṇḍe siddhidāyakaḥ}\footnote{svapiṇḍe siddhidāyakaḥ YTB] sapiṇḍisiddhidāyakaḥ YSv sapiṇḍisiddhidāyakaḥ YK} || 1 ||
 
-Actions are meditation, ritual veneration, donation, sacrifice, recitation, etc.
+(1) Actions are meditation, ritual veneration, donation, recitation, fire sacrifice, etc. 
+The Yoga made of liberation through action[s] bestows success in one's own body. 
 
+\textit{yat karomīti saṅkalpaṃ kāryārambhe manaḥ sadā} |\\
+\textit{tat sāṅgācaraṇaṃ kurvan kriyāyogarato bhavet} || 2 ||
 
-yatkāromīti saṅkalpaṃ kāryārambhe manaḥ sadā |
-tatsāṅgācaraṇaṃ kurvan kriyāyogarato bhavet |
+(2) ``Whatever I do'' at the beginning of an action, the mind always has intention.  
+Doing that undertaking with all its parts, one becomes established in Kriyāyoga. 
 
-kṣamāvivekavairāgyaśāntisantoṣanispṛhāḥ |
-etanmuktiyuto yo'sau kriyāyogo nigadyate |
+\textit{kṣamāvivekavairāgyaśāntisantoṣanispṛhāḥ} |\\
+\textit{etad yuktiyuto yo'sau kriyāyogo nigadyate} || 3 ||
 
-mātsaryaṃ mamatā māyā hiṃsā ca madagarvitā |
-kāmaḥ krodho bhayaṃ lajjā lobho mohastathā'śuciḥ |
+(3) Patience, discrimination, equanimity, peace, modesty, desirelessness:
+The one endowed with these means is said to be a Kriyāyogī.
 
-rāgadveṣau ghṛṇālasyaśrāntidambhakṣamābhramāḥ |
-yasyaitāni na vidyante kriyāyogī sa ucyate |
+\textit{mātsaryaṃ mamatā māyā hiṃsā ca madagarvitā} |\\
+\textit{kāmaḥ krodho bhayaṃ lajjā lobho mohas tathā'śuciḥ} || 4 ||
 
-sa eva muktaḥ sa jñānī caṇḍi nāśena īśvaraḥ |
-kriyāmuktikaro yo'sau rājayogaḥ sa muktidaḥ |
+(4) Envy, selfishness, cheating, violence, intoxication and pride,
+lust, anger, fear, laziness, greed, error, and impurity.
 
-=================================================
-==================================================
+\textit{rāgadveṣau ghṛṇālasyaśrāntidambhakṣamābhramāḥ} |\\
+\textit{yasyaitāni na vidyante kriyāyogī sa ucyate} || 5 ||
 
-dhyānaṃ pūjādānayajñā japahomādikāḥ kriyāḥ।
-kriyāmuktirayaṃ yogaḥ sapiṇḍe siddhadāyakaḥ।। 209।।
+(5) Attachment and aversion, disgust and laziness, error, deceit, envy [and] confusion:
+Whoever does not experience these is called a Kriyāyogī.
 
-yat karomīti saṅkalpaṃ kāryārambhe manaḥ sadā।
-tat saṅgācaraṇaṃ kurvan kriyāyogarato bhavet।। 210।।
+\textit{sa eva muktaḥ sa jñānī caṇḍināśena īśvaraḥ} |\\
+\textit{kriyāmuktikaro yo'sau rājayogaḥ sa muktidaḥ} || 6 ||(om. YK)
 
-kṣamāvivekavairāgyaśāntisantoṣanispṛhāḥ।
-etanmuktiyutaścāsau kriyāyogī nigadyate।। 211।।
+(6) He alone, the wise one, the lord, through the destruction of impetuous [behaviour]
+who performs the liberation through action[s] is liberated. This Rājayoga is the giver of liberation.
 
-mātsaryaṃ mamatā māyā hiṃsā ca madagarvitaḥ।
-kāmaḥ krodho bhayaṃ lajjā lobho mohastathā śuciḥ।। 212।।
+\textit{yāvan mano layaṃ yāti kṛṣṇe svātmani cinmaye} | \\
+\textit{bhaved iṣṭamanā mantrī japahomau samabhyaset} || 7 ||(om. YSv)
 
-rāgadveṣau ghṛṇālasyaṃ bhrāntirdambho'kṣamā bhramaḥ।
-yasyaitāni na vidyante kriyāyogī sa ucyate।। 213।।
+(7) Until the mind enters absorption [and] would be in Kṛṣṇa, in one's own self, filled with consciousness,
+the mantra practitioner should practise recitation and fire sacrifice with an aspiring mind. 
 
+\textit{vidite paratattve tu samastair niyamair alam} |\\
+\textit{tālavṛntena kiṃ kāryaṃ lavdhe malayamārute} || 8 || (om. YSv)
 
+(8) When the highest principle has been realised through all the \textit {niyama}s, as is proper,
+Why should one wave the palm frond when the wind from the Himalayas has already reached?
 
+\textit{tāvat karmmāṇi kurvanti yāvajjñānaṃ na vidyate} |\\
+\textit{jñāne jāte pareśāni karmākarma na vidyate} || 9 ||(om. YSv)
 
-yāvanmano layaṃ yāti kṛṣṇe svātmani cinmaye।
-bhavediṣṭamanā mantrī japahomau samabhyaset।। 214।।
+(9) As long as [regular?] actions are performed, so long realisation is unknown.
+When knowledge ensues, oh, Supreme Goddess, neither action nor non-action is known.
+\end{quote}
 
-vidite paratattve tu samastairniyamairalam।
-tālavṛntena kiṃ kāryaṃ lavdhe malayamārute।। 215।।
+Diese Verse\footnote{Die hier verwendete Nummerierung wurde von mir aus praktischen Gründen eingeführt und stimmt nicht mit der Originalnummerierung der Verse in den Zitaten der Quelltexten überein. Die \textit{Prāṇatoṣiṇī} nummiert die Verse überhaupt nicht. Die Verse finden sich in der Druckausgabe der \textit{Prāṇatoṣiṇī} auf S. 831. Die hiesigen Verse sind in der \textit{Yogakarṇikā} mit der Nummerierung 1.209-216 und befinden sich in der Edition auf S. 17.} entstammen den beiden einzigen derzeit vorhanden Quellen des \textit{Yogasvarodaya}, nämlich den Zitaten aus der \textit{Prāṇatoṣiṇī}\footnote{Ein sehr großer Teil des \textit{Yogasvarodaya} ist mit mit Quellangabe (\textit{yogasvarodaya} zitiert.} und der \textit{Yogakarṇikā}\footnote{Im Normalfall zitiert die \textit{Yogakarṇikā} ihre Quellen. Diese Passage ist einer der wenigenein Ausnahmefall bei dem die Verse aus dem \textit{Yogasvarodaya} ohne Quellangabe übernommen worden sind. Diese Passage endet allerdings nach Vers 1.216 mit ``\textit{iti yogasaṅketāḥ |}''.} Die Zitate stimmen größtenteils überein, allerdings unterscheiden sich die letzten Verse der Passage voneinander. Es ist nicht auszuschließen, dass insbesondere die letzten drei Verse der \textit{Yogakarṇikā} aus einer anderen Quelle stammen. Sie sind jedoch inhaltlich so eng mit den vorangehenden Verse verwoben, dass dieses Szenario ohne Weiteres als unwahrscheinlich zu gelten hat.
 
-tāvat karmmāṇi kurvanti yāvajjñānaṃ na vidyate।
-jñāne jāte pareśāni karmākarma na vidyate।। 216।।
+Der offensichtliche Hauptunterschied zum Kriyāyoga das Rāmacandra aus diesen Versen konstruiert hat ist die unmittelbar am Anfang der Verse genannte Definition derjeniger Handlungen (\textit{kriyāḥ}), aus denen Kriyāyoga sich dann primär zusammensetzt, nämlich aus (1) Meditation, (2) ritueller Gottesverehrung, (3) Gaben, (4) Rezitation und (5) Feueropferung etc. Es folgt der Teil, den auch Rāmacandra in seiner Abhandlung von Kriyāyoga übernimmt. Während Rāmacandra die in Tabelle \ref{tab:waves} genannten Elemente als Wellen (\textit{kallola}) des Geistes deklariert, die es zu kultivieren und zu reduzierenden gilt, so werden diese Elemente im \textit{Yogasvarodaya} als die einer Handlung vorangehenden Intentionen (\textit{saṅkalpa}) konzeptualisiert, welche in ihrer Vollständigkeit vor jeder Ausübung der von ihm genannten Tätigkeiten beachtet werden sollen. Diese fünf Handlungen werden im sechten Vers, dessen Inhalt konsequenterweise ebenfalls von Rāmacandra ignoriert wird, dann als Mittel zur der Befreiung aufgegriffen.
 
-iti yogasaṅketāḥ।
+In den drei diese Sektion abschließenden Versen, welche in der \textit{Yogakarṇikā} überliefert sind, wird der Übende sogar als \textit{mantrin} bezeichnet, und soll bis zum Eintreten in die Absorption (\textit{laya}) Rezitation und Feueropfer ausführen.
 
+Dieses Konzept des Kriyāyoga im \textit{Yogasvarodaya} scheint eine deutliche Anlehnung an das Konzept des \textit{kriyāpada}\footnote{Siehe z.B. \citeauthor{ganesan2016saiva} (2016) und \citetitle{mrgendragama} (Ed. pp. 1-205).}  der Śaiva \textit{āgama}s zu sein. Diesen Sammlugen verschiedener tantrischer Traditionen, verfasst in Sanskrit oder Tamil, in denen Kosmologie, Epistomologie, philosophische Lehren, diverse Praktiken, wie Meditation oder Yoga, Mantrarezitation, Götterverehrung usw.\footnote{\citeauthor{lipner2004} 2004: 27-28.} beschrieben werden, bestehen in der Regel aus vier Abschnitten (\textit{pada}s): Dem \textit{jñānapada} (Wissensabschnitt), dem \textit{yogapada} (Yogaabschnitt), \textit{kriyāpada} (Handlungsabschnitt) und \textit{caryāpada} (Verhaltensabschnitt). Es muss davon ausgegangen werden, dass es sich nicht um einen Zufall handelt, dass \textit{jñāna°}, \textit{kriyā°} und \textit{caryā°} als jeweils eigene Yogakategorie in der Taxonomie der fünfzehn Yogas integriert wurden. Der \textit{kriyāpada} ist derjenige Abschnitt eines \textit{āgama} in dem Regeln und Praktiken für die Durchführung verschiedener Rituale wie z.B. Initiation (\textit{dīkṣa}), Zeremonien und Götterverehrung beschrieben werden. 
 
+Querverweis zu Zusammenfassung des Kapitels in Edition! 
 
-https://www.wisdomlib.org/hinduism/essay/sivaprakasam-study/d/doc1210756.html
--> Carya,Kriya,Yoga and Jnana! 
-
-In the Shaiva Siddhanta tradition, the term "pada" refers to the four categories or aspects that make up the structure of the Absolute Reality (Brahman) and the process of creation. These four padas are:
-
-    Charya Pada: Also known as the path of conduct or virtuous living. It involves observing religious rituals, ethical practices, and engaging in acts of service and devotion.
-
-    Kriya Pada: This is the path of action and ritual worship. It involves the performance of various rituals, ceremonies, and worship practices to attain spiritual purification and alignment with the divine.
-
-    Yoga Pada: This path emphasizes meditation, concentration, and yogic practices. It involves controlling the mind and senses to attain a higher state of consciousness and union with the divine.
-
-    Jnana Pada: Also known as the path of knowledge or wisdom. It involves the study and contemplation of philosophical teachings to gain a deep understanding of the nature of reality and the self.
-
-    These four padas together form the comprehensive spiritual framework of the Shaiva Siddhanta tradition.
-
-
-    
+Śaiva-Āgama. Authoritative texts of Śaivism, the earliest being written between 400–800 CE. The texts deal with Śaiva liturgy which involves nyāsa, mudrā, mantra, the construction of yantras or maṇḍalas and visualization (dhyāna), the construction of shrines and temples, and festivals. Interest in philosophy is somewhat limited and is mainly concerned with speculation on the power of speech and the tattvas. Initiation (dīkṣā) is important in the texts. The Āgamas theoretically follow a fourfold structure of jñāna, yoga, kriya, and carya padas, though this pattern is seldom strictly adhered to.
 
 
+The Agamas (Devanagari: आगम, IAST: āgama) (Tamil: ஆகமம், romanized: ākamam) are a collection of several Tantric literature and scriptures of Hindu schools.[1][2] The term literally means tradition or "that which has come down", and the Agama texts describe cosmology, epistemology, philosophical doctrines, precepts on meditation and practices, four kinds of yoga, mantras, temple construction, deity worship and ways to attain sixfold desires.[1][3] These canonical texts are in Tamil[4][5] and Sanskrit.[1]
+
+    Jnana pada, also called Vidya pada[12] – consists of doctrine, the philosophical and spiritual knowledge, knowledge of reality and liberation.
+    Yoga pada – precepts on yoga, the physical and mental discipline.
+    Kriya pada – consists of rules for rituals, construction of temples (Mandir); design principles for sculpting, carving, and consecration of idols of deities for worship in temples;[26] for different forms of initiations or diksha. This code is analogous to those in Puranas and in the Buddhist text of Sadhanamala.[12]
+    Charya pada – lays down rules of conduct, of worship (puja), observances of religious rites, rituals, festivals and prayaschittas.
+
+
+hier!!!! + pdf mit Original! super! 
+https://www.wisdomlib.org/hinduism/essay/sivaprakasam-study/d/doc1210755.html#note-t-234177
+
+%iti yogasaṅketāḥ।
+%https://www.wisdomlib.org/hinduism/essay/sivaprakasam-study/d/doc1210756.html
+%-> Carya,Kriya,Yoga and Jnana! 
+%
+%In the Shaiva Siddhanta tradition, the term "pada" refers to the four categories or aspects that make up the structure of the Absolute Reality (Brahman) and the process of creation. These four padas are:%
+%
+%    Charya Pada: Also known as the path of conduct or virtuous living. It involves observing religious rituals, ethical practices, and engaging in acts of service and devotion.%
+%
+%    Kriya Pada: This is the path of action and ritual worship. It involves the performance of various rituals, ceremonies, and worship practices to attain spiritual purification and alignment with the divine.%
+%
+%    Yoga Pada: This path emphasizes meditation, concentration, and yogic practices. It involves controlling the mind and senses to attain a higher state of consciousness and union with the divine.
+%
+%    Jnana Pada: Also known as the path of knowledge or wisdom. It involves the study and contemplation of philosophical teachings to gain a deep understanding of the nature of reality and the self.
+%
+%    These four padas together form the comprehensive spiritual framework of the Shaiva Siddhanta tradition.
 \subsection{The concept of Kriyāyoga in the \textit{Yogasiddhāntacandrikā}}
 
 The Kriyāyoga in Nārāyaṇatīrtha's commentary on \textit{Pātañjalayogaśāstra} entitled \textit{Yogasiddhāntacandrikā} presents Kriyāyoga as the first of his fifteen yogas, which he locates in Pātañjalayoga. The term occurs in the context of \textit{Pātañjalayogaśāstra} 2.1. According to the introduction to this Sūtra, in the \textit{bhāṣya} part of the\textit{Pātañjalayogaśāstra}, Kriyāyoga is a means by which someone with a distracted mind can also attain Yoga (\textit{vyutthitacitto 'pi yogayuktaḥ}). In the Sūtra itself, Kriyāyoga is defined as follows:
 \begin{quote}  
-  tapaḥsvādhyāyeśvarapraṇidhānāni kriyāyogaḥ | \citetitle{yogasutra} 2.1  
+  \textit{tapaḥsvādhyāyeśvarapraṇidhānāni kriyāyogaḥ} |\\
+  \citetitle{yogasutra} 2.1  \\
 \end{quote}
-\begin{quote}
+
 Kriyāyoga, or ``yoga through action'', consists of three elements. Namely, abstinence (\textit{tapas}), which according to \textit{bhāṣya} should be practised both mentally and physically, the repetition of \textit{mantra}s or the study of sacred literature (\textit{svadhyāya}) and devotion to God (\textit{īśvarapraṇidhāna}).
-\end{quote}
- According to \citetitle{yogasutra} 2.2, these three elements of Kriyāyoga should lead the practitioner to attain Samādhi by reducing the so-called \textit{kleśa}s. This explanatory model is also used by Nārāyaṇatīrtha (\citeauthor{yogacandrika}, 2000:71). The five \textit{kleśa}s consist of ignorance (\textit{avidyā}), self-centredness (\textit{asmitā}), attachment (\textit{rāga}), aversion (\textit{dveṣa}) and fear of death (\textit{abhiniveśa}). 
+
+According to \citetitle{yogasutra} 2.2, these three elements of Kriyāyoga should lead the practitioner to attain Samādhi by reducing the so-called \textit{kleśa}s. This explanatory model is also used by Nārāyaṇatīrtha (\citeauthor{yogacandrika}, 2000:71). The five \textit{kleśa}s consist of ignorance (\textit{avidyā}), self-centredness (\textit{asmitā}), attachment (\textit{rāga}), aversion (\textit{dveṣa}) and fear of death (\textit{abhiniveśa}). 
 
 \subsection{Kriyāyoga in the complex late-medieval Yoga taxonomies}
 
-All three main components of Patañjali's Kriyāyoga are not mentioned in the \textit{Yogatattvabindu} and \textit{Yogasvarodaya}. Nevertheless, something very similar to the \textit{kleśa}s, including the intention to reduce that can also be found here. Although the specific fear of death (\textit{abhiniveśa}) is not mentioned, the more general term for fear (\textit{bhaya}) is cited.
+All three main components of Patañjali's Kriyāyoga are not mentioned in the \textit{Yogatattvabindu} and \textit{Yogasvarodaya}. Nevertheless, a practice similar to the reduction of the \textit{kleśa}s can also be found here. Although the specific fear of death (\textit{abhiniveśa}) is not mentioned, the more general term for fear (\textit{bhaya}) is cited.
 
 The Kriyāyoga in \textit{Yogatattvabindu} and \textit{Yogasvarodaya} could, therefore, be perhaps regarded as a degenerated or simplified variant of the Pātañjalean model, which replaces the three main components \textit{tapas}, \textit{svadhyāya} and \textit{īśvarapraṇidhāna} with and instead restricts itself entirely to the aspect of \textit{kleśa} reduction. The \textit{Yogatattvabindu} extends the more ancient list of \textit{kleśa}s with various terms and adds positive ``waves'' to be mix. In both discussed systems, Kriyāyoga is a means for liberation.
 
@@ -439,7 +452,7 @@ Similarities between Yoga taxonomies of Rāmacandra's \textit{Yogatattvabindu}, 
 \hline
 3. & \textit{caryāyoga} & \textit{karmayoga} & \textit{karmayoga} & \textit{layayog} \\
 \hline
-4. & \textit{haṭhayoga} & \textit{haṭhayoga} & \textit{haṭhayoga} & \textit{caryāyog} \\
+4. & \textit{haṭhayoga} & \textit{haṭhayoga} & \textit{haṭhayoga} & \textit{carcāyog} \\
 \hline
 5. & \textit{karmayoga} & \textit{dhyānayoga} & \textit{mantrayoga} & \textit{haṭhayog} \\
 \hline
@@ -716,6 +729,12 @@ Due to inconsistent use of class nasals among the witnesses \textit{anusvāra}s 
 Lists are a frequent feature in the \textit{Yogatattvabindu}. The text opens with a list of 15 Yogas and there are many more lists utilized throughout its content. To produce a consistent and easily readable edition, all lists have been identified, normalized to the Nominative Singular or Nominative Plural form of the respective item, or in the case of explanatory lists, to the Ablative Singular or Plural. The items are separated by a double \textit{daṇḍa}. Differences in punctuation and simple punctuation emendations, unless they are text-critically or systematically significant, will not be recorded in the apparatus criticus.
 \clearpage
 
+\section{Grammatical particularities}
+
+Section XVII. ->
+
+Grammatical constructions in this text may deviate from classical Sanskrit. In most cases, however, these should not be regarded as errors due to their frequency, but as phenomena of contemporary or regional language usage. Some constructions in this section and in other passages of the text use the genitive as a substitute for other cases, such as the dative, instrumental or locative (cf. \citeauthor{whitney1879} 1879: 87 [294]). In particular, this can be observed in this and other places in the text in relative clause constructions beginning with \textit{yasya}, which must be read as \textit{yasmin}, as otherwise the corresponding correlative pronoun seems to be missing, and the genitive, for example, in connection with the following word \textit{manasi} or \textit{manaḥ} (see edition text) would make the yogin the implicit subject of the sentence and the actual correlative pronoun of the construction referring to \textit{yasya}, in this section \textit{ayam} or \textit{saḥ}, would appear incongruent. At the same time, the \textit{daṇḍa}s in these constructions should be understood as commas or semicolons.     
+
 \section{Structural Issues of the Yogatattvabindu}
 \label{structure}
 \chapter{Related Texts}
@@ -837,3 +856,16 @@ Rāmacandra adopts this ideal, which the SSP has further developed, and pushes t
 %%% mode: latex
 %%% TeX-master: t
 %%% End:
+\chapter{Dankesagung}
+Dominic Haas! Danke!
+Shaman Hatley! Danke!
+Dominik Goodall! Danke!
+Jim
+Jasom
+Mitsuyo
+Jüprgen
+Max!!!!
+Bastian!
+Roland Steiner
+Kolloquium
+allen MArburgern
