--- a/preamble.tex
+++ b/preamble.tex
@@ -296,6 +296,7 @@ surname=Liersch]
 
 \NewDocumentCommand{\extra}{m}{{\textcolor{gray}{#1}}} %command for additions to U2
 \NewDocumentCommand{\crazy}{m}{{\textcolor{red}{#1}}} %totally corrupted passage
+\NewDocumentCommand{\high}{m}{{\textcolor{blue}{#1}}} %highlighted passage 
 \NewDocumentCommand{\coro}{m}{{\textcolor{violet}{#1}}} %colour for sentence counter! 
 
 \NewDocumentEnvironment{prose}{O{}}{\begin{otherlanguage}{iast}}{\end{otherlanguage}}
